# project2_sofiyskiy_dmitriy_M25-555

./: README.md  constants.py  core.py  db.cast  db_meta  db_meta.json  decorators.py  engine.py  main.py  makefile  parser.py  pyproject.toml  user.json  utils.py
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  metadata.json  parser.py  utils.py
src/primitive_db/data/: db_meta.json  user.json  users.json
