[tool.poetry]
name = "project2-sofiyskiy-dmitriy-m25-555"
version = "0.1.0"
description = ""
authors = ["Sofiyskiy Dmitry"]
readme = "README.md"
 packages = [
     { include = "src" },
 ]

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[dependency-groups]
dev = [
    "ruff (>=0.14.4,<0.15.0)"
]
