[tool.poetry]
name = "project2-sofiyskiy-dmitriy-m25-555"
version = "0.1.0"
description = ""
authors = ["Sofiyskiy Dmitry"]
readme = "README.md"
 packages = [
     { include = "src" },
 ]

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
database = "src.primitive_db.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 
